@@ -1,23 +1,16 @@
 {
-  "timestamp" : "2022-09-13T16:29:48Z",
-  "count_outdated" : 1,
-  "uniques_outdated" : 1,
-  "count" : 65,
-  "uniques" : 29,
+  "timestamp" : "2022-09-14T02:21:22Z",
+  "count_outdated" : 107,
+  "uniques_outdated" : 14,
+  "count" : 135,
+  "uniques" : 31,
   "clones" : [
     {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 26,
-      "count_minmax": [ 26, 106 ],
-      "uniques": 6,
-      "uniques_minmax": [ 6, 13 ]
-    },
-    {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 14,
-      "count_minmax": [ 12, 14 ],
-      "uniques": 8,
-      "uniques_minmax": [ 6, 8 ]
+      "count": 3,
+      "count_minmax": [ 3, 14 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 8 ]
     },
     {
       "timestamp": "2022-09-01T00:00:00Z",
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-09-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
