@@ -1,16 +1,11 @@
 {
-  "count": 64,
-  "uniques": 13,
+  "count": 28,
+  "uniques": 8,
   "clones": [
     {
-      "timestamp": "2022-08-30T00:00:00Z",
-      "count": 26,
-      "uniques": 6
-    },
-    {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 14,
-      "uniques": 8
+      "count": 3,
+      "uniques": 3
     },
     {
       "timestamp": "2022-09-01T00:00:00Z",
@@ -54,7 +49,7 @@
     },
     {
       "timestamp": "2022-09-13T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
