@@ -1,3 +1,11 @@
+2022-09-14T02:21:22Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049710881
+* notice: last 14d: unq all: 8 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 1 1 / 29 65
+* notice: next accum: outdated-unq outdated-all / unq all: 14 107 / 31 135
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -5 -11 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-08-30] / [2022-08-31 2022-09-13]
+
 2022-09-13T16:29:48Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3046766358
 * notice: last 14d: unq all: 13 64
